fix desktop nav items alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -70,6 +70,8 @@ nav a {
   line-height: 1.6;
   font-size: 1rem;
   color: #4a4a4a;
+  display: flex;
+  align-items: center;
 }
 
 header .icon {
